Upgrading to newer versions of its_* dependencies and the newer versions of the ProgrammingLanguageExpressionDTDomain domain model