@@ -1,31 +1,37 @@
 package org.vstu.compprehension.models.businesslogic.domains.helpers;
 
+import its.model.definition.ClassDef;
 import its.model.definition.Domain;
+import its.model.definition.ObjectDef;
 import its.model.definition.loqi.DomainLoqiWriter;
-import its.model.definition.rdf.DomainRDFFiller;
-import its.model.definition.rdf.RDFUtils;
+import its.model.nodes.DecisionTree;
 import lombok.extern.log4j.Log4j2;
-import lombok.val;
+import org.apache.commons.lang3.tuple.Pair;
 import org.apache.jena.rdf.model.Model;
-import org.apache.jena.rdf.model.ModelFactory;
 import org.apache.jena.rdf.model.Property;
+import org.apache.jena.rdf.model.RDFNode;
 import org.apache.jena.rdf.model.Resource;
-import org.springframework.data.util.Pair;
+import org.vstu.compprehension.models.businesslogic.Question;
+import org.vstu.compprehension.models.businesslogic.backend.facts.Fact;
+import org.vstu.compprehension.models.businesslogic.domains.ProgrammingLanguageExpressionDTDomain;
 import org.vstu.compprehension.models.businesslogic.domains.ProgrammingLanguageExpressionDomain;
-import org.vstu.compprehension.models.entities.BackendFactEntity;
-import org.vstu.compprehension.models.entities.InteractionEntity;
-import org.vstu.compprehension.models.entities.QuestionEntity;
 import org.vstu.compprehension.models.entities.ResponseEntity;
 
 import java.io.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static its.model.definition.build.DomainBuilderUtils.*;
+import static its.model.definition.build.DomainBuilderUtils.addMeta;
+
 @Log4j2
 public class ProgrammingLanguageExpressionRDFTransformer {
 
-    private static final String DEBUG_DIR = "C:\\Uni\\CompPrehension_mainDir\\inputs\\input_examples\\";
-    private static void debugDumpLoqi(its.model.definition.Domain model, String filename){
+    private static final String DEBUG_DIR = "./modules/core/src/main/resources/" + ProgrammingLanguageExpressionDTDomain.DOMAIN_MODEL_LOCATION;
+    private static final String BASE_TTL_PREF = "http://vstu.ru/poas/code#";
+
+    public static void debugDumpLoqi(Domain model, String filename){
+        if(!ENABLE_DEBUG_SAVE) return;
         try {
             DomainLoqiWriter.saveDomain(
                 model,
@@ -33,146 +39,259 @@ public class ProgrammingLanguageExpressionRDFTransformer {
                 new HashSet<>()
             );
         } catch (IOException e) {
-            log.debug("Could not save " + filename);
+            throw new RuntimeException(e);
         }
     }
 
-    public static its.model.definition.Domain questionToDomainModel(
-        its.model.definition.Domain commonDomainModel,
-        QuestionEntity question,
-        InteractionEntity lastQuestionInteraction
-    ){
-        return questionToDomainModel(
-            commonDomainModel,
-            question.getStatementFacts(),
-            lastQuestionInteraction.getResponses()
-        );
-    }
-
-    public static its.model.definition.Domain questionToDomainModel(
-        its.model.definition.Domain commonDomainModel,
-        List<BackendFactEntity> questionFacts,
+    public static Domain questionToDomainModel(
+        Domain domainModel,
+        Map<String, DecisionTree> decisionTreeMap,
+        Question question,
         List<ResponseEntity> responses
     ){
-        Model m = questionToModel(questionFacts, responses);
-        its.model.definition.Domain situationModel = commonDomainModel.getDomain().copy();
-        DomainRDFFiller.fillDomain(
-            situationModel,
-            m,
-            Collections.singleton(DomainRDFFiller.Option.NARY_RELATIONSHIPS_OLD_COMPAT),
-            null
-        );
-        situationModel.validateAndThrowInvalid();
-
-//        val dumpModel = situationModel.copy();
-//        dumpModel.subtract(commonDomainModel);
-//        debugDumpLoqi(dumpModel, "out.loqi");
-        return situationModel;
+        return questionToDomainModel(domainModel, decisionTreeMap, question, responses, true).domain;
     }
 
-    public static Model questionToModel(
-        List<BackendFactEntity> questionFacts,
-        List<ResponseEntity> responses
-    ){
-        Model base = ProgrammingLanguageExpressionDomain.factsToOntModel(questionFacts);
+    public record ParsedDomain(Domain domain, List<Integer> errorPos){}
+
+    public static ParsedDomain questionToDomainModel(
+        Domain domainModel,
+        Map<String, DecisionTree> decisionTreeMap,
+        Question question,
+        List<ResponseEntity> responses,
+        boolean isLastSelectionVariable
+    ) {
+        Model base = ProgrammingLanguageExpressionDomain.factsToOntModel(
+            question.getStatementFactsWithSchema().stream()
+                .map(Fact::asBackendFact)
+                .toList()
+        );
+
         List<Resource> selected = responses.stream()
-            .map((r) -> base.getResource("http://vstu.ru/poas/code#" + r.getLeftAnswerObject().getDomainInfo()))
-            .collect(Collectors.toList());
-    
+            .map((r) -> base.getResource(BASE_TTL_PREF + r.getLeftAnswerObject().getDomainInfo()))
+            .toList();
+        return questionToDomainModel(
+            domainModel,
+            decisionTreeMap,
+            base,
+            selected,
+            isLastSelectionVariable
+        );
+    }
+
+    private static ParsedDomain questionToDomainModel(
+        Domain domainModel,
+        Map<String, DecisionTree> decisionTreeMap,
+        Model base,
+        List<Resource> selectedTokens,
+        boolean isLastSelectionVariable
+    ){
         saveModel("base.ttl", base);
-        Model res = ModelFactory.createDefaultModel();
-        res.setNsPrefix("", RDFUtils.POAS_PREF);
-        Property indexProperty = base.getProperty("http://vstu.ru/poas/code#index");
-        Property typeProperty = res.getProperty(RDFUtils.RDF_PREF + "type");
-        Property leftOfProperty = res.getProperty(RDFUtils.POAS_PREF + "directlyLeftOf");
-        Property stateProperty = res.getProperty(RDFUtils.POAS_PREF + "state");
-        Property varProperty = res.getProperty(RDFUtils.POAS_PREF + "var...");
-        Property ruProperty = res.getProperty(RDFUtils.POAS_PREF + "RU_localizedName");
-        Property enProperty = res.getProperty(RDFUtils.POAS_PREF + "EN_localizedName");
+
+        Domain situationDomain = new Domain();
+        ParsedDomain parseResult = new ParsedDomain(situationDomain, new ArrayList<>());
+
+        Property indexProperty = base.getProperty(BASE_TTL_PREF + "index");
         List<Resource> baseTokens = base.listSubjectsWithProperty(indexProperty).toList().stream()
-                .sorted(Comparator.comparingInt((a) -> a.getProperty(indexProperty).getInt()))
-                .collect(Collectors.toList());
-        Map<Resource, Resource> baseTokensToTokens = new HashMap<>();
-        Map<Resource, Resource> baseTokensToElements = new HashMap<>();
+            .sorted(Comparator.comparingInt((a) -> a.getProperty(indexProperty).getInt()))
+            .collect(Collectors.toList());
+
+        Map<Resource, ObjectDef> baseTokensToTokens = new HashMap<>();
+        Map<Resource, ObjectDef> baseTokensToElements = new HashMap<>();
+        Map<Resource, Resource> complexPairsMap = getComplexPairsMap(baseTokens);
+
         for(Resource baseToken : baseTokens){
-            if(baseTokensToTokens.containsKey(baseToken))
-                continue;
-            Resource resElement = getResource(res,"element_" + baseToken.getLocalName());
-            resElement.addProperty(typeProperty, getClassResource(baseToken, res));
-            resElement.addProperty(stateProperty, getResource(res, className(baseToken).equals("operand")? "evaluated" : "unevaluated"));
-            Resource resToken = resTokenFromBase(baseToken, resElement);
-    
-            Pair<String, String> loc = getLocalizedName(baseToken, baseTokens.indexOf(baseToken)+1);
-            resElement.addProperty(ruProperty, loc.getFirst());
-            resElement.addProperty(enProperty, loc.getSecond());
-            resToken.addProperty(ruProperty, loc.getFirst());
-            resToken.addProperty(enProperty, loc.getSecond());
-    
-            baseTokensToTokens.put(baseToken, resToken);
-            baseTokensToElements.put(baseToken, resElement);
-            
-            if(getOtherComplex(baseToken) != null){
-                Resource otherBaseToken = getOtherComplex(baseToken);
-                Resource otherResToken = resTokenFromBase(otherBaseToken, resElement);
-                Pair<String, String> otherloc = getLocalizedName(otherBaseToken, baseTokens.indexOf(otherBaseToken)+1);
-                otherResToken.addProperty(ruProperty, otherloc.getFirst());
-                otherResToken.addProperty(enProperty, otherloc.getSecond());
-                
-                baseTokensToTokens.put(otherBaseToken, otherResToken);
-            }
-            
+            createAndPutObjects(
+                baseToken,
+                domainModel,
+                situationDomain,
+                parseResult,
+                baseTokensToTokens,
+                baseTokensToElements,
+                complexPairsMap
+            );
         }
-        
+
         for(Resource baseToken : baseTokens.subList(1, baseTokens.size())){
             int tokenIndex = baseTokens.indexOf(baseToken);
-            Resource resToken = baseTokensToTokens.get(baseToken);
-            Resource previousResToken = baseTokensToTokens.get(baseTokens.get(tokenIndex - 1));
-            previousResToken.addProperty(leftOfProperty, resToken);
+            ObjectDef resToken = baseTokensToTokens.get(baseToken);
+            ObjectDef previousResToken = baseTokensToTokens.get(baseTokens.get(tokenIndex - 1));
+            addRelationship(previousResToken, "directlyLeftOf", resToken.getName());
         }
 
-        if(!selected.isEmpty()) {
-            for (Resource baseToken : selected.subList(0, selected.size() - 1)) {
-                baseTokensToElements.get(baseToken).removeAll(stateProperty);
-                baseTokensToElements.get(baseToken).addProperty(stateProperty, getResource(res, "evaluated"));
-                baseToken.listProperties(base.getProperty("http://vstu.ru/poas/code#ast_edge")).toList().stream()
-                    .map(s -> s.getObject().asResource())
-                    .filter(resource -> !resource.equals(getOtherComplex(baseToken)))
-                    .map(baseTokensToElements::get)
-                    .forEach(operand -> {
-                        operand.removeAll(stateProperty);
-                        operand.addProperty(stateProperty, getResource(res, "used"));
-                    });
+        situationDomain.addMerge(domainModel);
+        situationDomain.validateAndThrow();
+
+        solveSituation(
+            situationDomain,
+            decisionTreeMap,
+            selectedTokens,
+            isLastSelectionVariable,
+            baseTokensToElements,
+            baseTokensToTokens
+        );
+
+
+        situationDomain.validateAndThrow();
+        debugDumpLoqi(situationDomain, "out.loqi");
+        return parseResult;
+    }
+
+    private static void createAndPutObjects(
+        Resource baseToken,
+        Domain domainModel,
+        Domain situationDomain,
+        ParsedDomain parseResult,
+        Map<Resource, ObjectDef> baseTokensToTokens,
+        Map<Resource, ObjectDef> baseTokensToElements,
+        Map<Resource, Resource> complexPairsMap
+    ) {
+        if(baseTokensToTokens.containsKey(baseToken))
+            return;
+
+        ParsedClassName parsedClassName = className(baseToken, domainModel);
+        String className = parsedClassName.className;
+        if(!parsedClassName.isCorrect){
+            parseResult.errorPos.add(getIndex(baseToken));
+        }
+        ObjectDef resElement = newObject(situationDomain, "element_" + baseToken.getLocalName(), className);
+        setEnumProperty(
+            resElement, "state",
+            "state", className.equals("operand") ? "evaluated" : "unevaluated"
+        );
+        if(domainModel.getClasses().get(className).isSubclassOf("operand")) {
+            boolean evaluationValue = getByProperty(baseToken, "has_value")
+                .map(res -> res.asLiteral().getBoolean())
+                .orElse(true);
+            setBoolProperty(resElement, "evaluatesTo", evaluationValue);
+        }
+        ObjectDef resToken = resTokenFromBase(baseToken, resElement);
+
+        Pair<String, String> loc = getLocalizedName(baseToken, className);
+        addLocalizedName(resElement, loc);
+        addLocalizedName(resToken, loc);
+
+        baseTokensToTokens.put(baseToken, resToken);
+        baseTokensToElements.put(baseToken, resElement);
+
+        if(complexPairsMap.containsKey(baseToken)){
+            Resource otherBaseToken = complexPairsMap.get(baseToken);
+            ObjectDef otherResToken = resTokenFromBase(otherBaseToken, resElement);
+            Pair<String, String> otherloc = getLocalizedName(otherBaseToken, className);
+            addLocalizedName(otherResToken, otherloc);
+
+            baseTokensToTokens.put(otherBaseToken, otherResToken);
+        }
+    }
+
+    private static void solveSituation(
+        Domain situationDomain,
+        Map<String, DecisionTree> decisionTreeMap,
+        List<Resource> selected,
+        boolean isLastSelectionVariable,
+        Map<Resource, ObjectDef> baseTokensToElements,
+        Map<Resource, ObjectDef> baseTokensToTokens
+    ) {
+        ProgrammingLanguageExpressionsSolver solver = new ProgrammingLanguageExpressionsSolver();
+        solver.solveTree(situationDomain, decisionTreeMap);
+        solver.solveStrict(situationDomain, decisionTreeMap);
+
+
+        for (Resource baseToken : selected) {
+            //в зависимости от контекста, последний выбранный объект делаем переменной, и не записываем факт его вычисления
+            if(isLastSelectionVariable && baseToken == selected.get(selected.size() - 1)){
+                if(baseTokensToElements.containsKey(baseToken)){
+                    newVariable(situationDomain, "X", baseTokensToElements.get(baseToken).getName());
+                    newVariable(situationDomain, "X1", baseTokensToTokens.get(baseToken).getName());
+                }
+                continue;
             }
-            Resource currentlyChosenRes = selected.get(selected.size() - 1);
-            if(baseTokensToElements.containsKey(currentlyChosenRes)){
-                baseTokensToElements.get(currentlyChosenRes).addProperty(varProperty, "X");
-                baseTokensToTokens.get(currentlyChosenRes).addProperty(varProperty, "X1");
+
+            ObjectDef operator = baseTokensToElements.get(baseToken);
+            setEnumProperty(
+                operator, "state",
+                "state", "evaluated"
+            );
+            situationDomain.getObjects().stream()
+                .filter(object -> object.isInstanceOf("operand") &&
+                    !object.getRelationshipLinks().listByName("isOperandOf").isEmpty() &&
+                    object.getRelationshipLinks().listByName("isOperandOf").stream()
+                        .allMatch(link -> link.getObjects().get(0) == operator)
+                )
+                .forEach(operand -> {
+                    setEnumProperty(
+                        operand, "state",
+                        "state", "used"
+                    );
+                });
+        }
+    }
+
+    private static ObjectDef resTokenFromBase(Resource baseToken, ObjectDef resElement){
+        Domain situation = resElement.getDomain();
+        ObjectDef token = newObject(situation, "token_" + baseToken.getLocalName(), "token");
+        addRelationship(resElement, "has", token.getName());
+        addMeta(token, "index", getIndex(baseToken));
+        return token;
+    }
+
+    private static Map<Resource, Resource> getComplexPairsMap(List<Resource> baseTokens){
+        Map<Resource, Resource> map = new HashMap<>();
+        for(int i = 0; i < baseTokens.size(); i++){
+            Resource currentToken = baseTokens.get(i);
+            Resource complexEnd = getOtherComplex(baseTokens, i);
+            if(complexEnd != null){
+                map.put(currentToken, complexEnd);
             }
         }
-        saveModel("res.ttl", res);
-        return res;
+        return map;
     }
-    
-    private static Resource resTokenFromBase(Resource baseToken, Resource resElement){
-        Model res = resElement.getModel();
-        Property typeProperty = res.getProperty(RDFUtils.RDF_PREF + "type");
-//        Property belongsProperty = res.getProperty(RDFUtils.POAS_PREF + "belongsTo");
-        Property hasProperty = res.getProperty(RDFUtils.POAS_PREF + "has");
-        
-        Resource resToken = getResource(res, "token_" + baseToken.getLocalName());
-        resToken.addProperty(typeProperty, getResource(res,"token"));
-//        resToken.addProperty(belongsProperty, resElement);
-        resElement.addProperty(hasProperty, resToken);
-        return resToken;
+
+    private static Resource getOtherComplex(List<Resource> baseTokens, int index){
+        Resource baseToken = baseTokens.get(index);
+        int nesting = 0;
+        for(int i = index; i < baseTokens.size(); i++){
+            Resource currentToken = baseTokens.get(i);
+            if(getText(baseToken).equals(getText(currentToken))){
+                nesting+=1;
+            }
+            else if(isComplexEnd(baseToken, currentToken)){
+                nesting-=1;
+                if(nesting == 0){
+                    return currentToken;
+                }
+            }
+        }
+        return null;
     }
-    
-    private static Resource getOtherComplex(Resource baseToken){
-        Property p = baseToken.getModel().getProperty("http://vstu.ru/poas/code#has_complex_operator_part");
-        return baseToken.hasProperty(p) ? baseToken.getProperty(p).getObject().asResource() : null;
+
+    private static boolean isComplexEnd(Resource begin, Resource end){
+        return getText(end).equals(Map.of(
+            "[", "]",
+            "(", ")",
+            "?", ":",
+            "if", "else"
+        ).get(getText(begin)));
     }
-    
-    private static Pair<String, String> getLocalizedName(Resource baseToken, int index){
-        String classname = className(baseToken);
+
+    private static int getIndex(Resource baseToken){
+        return baseToken.getProperty(baseToken.getModel().getProperty(BASE_TTL_PREF + "index")).getInt() - 1;
+    }
+
+    private static Optional<RDFNode> getByProperty(Resource baseRes, String propertyName){
+        Property property = baseRes.getModel().getProperty(BASE_TTL_PREF + propertyName);
+        if(!baseRes.hasProperty(property)){
+            return Optional.empty();
+        }
+        return Optional.of(baseRes.getProperty(property).getObject());
+    }
+
+    private static void addLocalizedName(ObjectDef object, org.apache.commons.lang3.tuple.Pair<String, String> localization){
+        addMeta(object, "RU", "localizedName", localization.getLeft());
+        addMeta(object, "EN", "localizedName", localization.getRight());
+    }
+
+    private static org.apache.commons.lang3.tuple.Pair<String, String> getLocalizedName(Resource baseToken, String classname){
         String ru;
         String en;
         if(classname.equals("parenthesis")){
@@ -187,91 +306,52 @@ public class ProgrammingLanguageExpressionRDFTransformer {
             ru = "оператор " + getText(baseToken);
             en = "operator " + getText(baseToken);
         }
-        ru += " на позиции " + index;
-        en += " at position " + index;
+        int pos = getIndex(baseToken) + 1;
+        ru += " на позиции " + pos;
+        en += " at position " + pos;
         return Pair.of(ru, en);
     }
 
     private static String getText(Resource baseToken){
-        return baseToken.getProperty(baseToken.getModel().getProperty("http://vstu.ru/poas/code#text")).getString();
+        return baseToken.getProperty(baseToken.getModel().getProperty(BASE_TTL_PREF + "text")).getString();
     }
 
-    private static String className(Resource baseToken){
-        String classname;
+    private record ParsedClassName(String className, boolean isCorrect){
+        ParsedClassName(String className){
+            this(className, true);
+        }
+    }
+
+    private static ParsedClassName className(Resource baseToken, Domain domainModel){
         String text = getText(baseToken);
-        Property arityProperty = baseToken.getModel().getProperty("http://vstu.ru/poas/code#arity");
-        Property placeProperty = baseToken.getModel().getProperty("http://vstu.ru/poas/code#prefix_postfix");
-        Property isFunctionCallProperty = baseToken.getModel().getProperty("http://vstu.ru/poas/code#is_function_call");
 
-        if(text.equals("(") || text.equals(")"))
-            classname = /*Objects.equals(baseToken.getProperty(isFunctionCallProperty).getString(), "true") ? "function_call" :*/ "parenthesis";
-        else if(text.equals("[") || text.equals("]")) classname = "brackets";
-        else if(text.equals("&&") ) classname = "and";
-        else if(text.equals("||") ) classname = "or";
-        else if(text.equals("!") ) classname = "not";
-        else if(text.equals("==") ) classname = "equal";
-        else if(text.equals("!=") ) classname = "notequal";
-        else if(text.equals("<") ) classname = "less";
-        else if(text.equals("<=") ) classname = "lesseq";
-        else if(text.equals(">") ) classname = "greater";
-        else if(text.equals(">=") ) classname = "greatereq";
-        else if(text.equals("+") ) classname = baseToken.getProperty(arityProperty).getString().equals("binary") ? "plus" : "unaryPlus";
-        else if(text.equals("-") ) classname = baseToken.getProperty(arityProperty).getString().equals("binary") ? "minus" : "unaryMinus";
-        else if(text.equals("++") ) classname = baseToken.getProperty(placeProperty).getString().equals("prefix") ? "prefixInc" : "postfixInc";
-        else if(text.equals("--") ) classname = baseToken.getProperty(placeProperty).getString().equals("prefix") ? "prefixDec" : "postfixDec";
-        else if(text.equals("*") ) classname = baseToken.getProperty(arityProperty).getString().equals("binary") ? "multiplication" : "operator_unary_*";
-        else if(text.equals("/") ) classname = "division";
-        else if(text.equals("?") || text.equals(":")) classname = "ternaryConditional";
-        else if(text.equals(",") ) classname = "comma";
-        else if(text.equals("^") ) classname = "power";
+        List<ClassDef> possibleClasses = domainModel.getClasses().stream()
+            .filter(classDef -> classDef.getMetadata().getEntries().stream()
+                .anyMatch(metadata -> metadata.getPropertyName().contains("text") && text.equals(metadata.getValue()))
+            )
+            .toList();
+        if(possibleClasses.isEmpty()){
+            return new ParsedClassName("operand", text.matches("[a-zA-Z_$][a-zA-Z0-9_$]*"));
+        }
+        if(possibleClasses.size() == 1){
+            return new ParsedClassName(possibleClasses.get(0).getName());
+        }
 
-        // новое от 30.06.2024 //
-        else if(text.equals("+=") ) classname = "operator_+=";
-        else if(text.equals("%") ) classname = "operator_%";
-        else if(text.equals("%=") ) classname = "operator_%=";
-        else if(text.equals("&") ) classname = baseToken.getProperty(arityProperty).getString().equals("binary") ? "operator_&" : "operator_unary_&";
-        else if(text.equals("&=") ) classname = "operator_&=";
-        /*else if(text.equals("(") ) classname = "__parentheses";*/
-        else if(text.equals("*=") ) classname = "operator_*=";
-        else if(text.equals("->") ) classname = "operator_pointer_field";
-        else if(text.equals(".") ) classname = "operator_.";
-        else if(text.equals("::") ) classname = "operator_::";
-        else if(text.equals("<<") ) classname = "operator_left_shift";
-        else if(text.equals("<<=") ) classname = "operator_left_shift_assign";
-        else if(text.equals("=") ) classname = "operator_=";
-        else if(text.equals(">>") ) classname = "operator_right_shift";
-        else if(text.equals(">>=") ) classname = "operator_right_shift_assign";
-        else if(text.equals("^=") ) classname = "operator_xor_assign";
-        else if(text.equals("|") ) classname = "operator_bitwise_or";
-        else if(text.equals("|=") ) classname = "operator_bitwise_or_assign";
-        else if(text.equals("~") ) classname = "operator_~";
-        else if(text.equals("sizeof") ) classname = "operator_sizeof";
-        else if(text.equals("co_await") ) classname = "operator_co_await";
-        else if(text.equals("new") ) classname = "operator_new";
-        else if(text.equals("delete") ) classname = "operator_delete";
-        else if(text.equals("<=>") ) classname = "operator_spaceship";
-        else if(text.equals("throw") ) classname = "operator_throw";
-        else if(text.equals("co_yield") ) classname = "operator_co_yield";
-        // The default.
-        else classname = "operand";
-
-        return classname;
-    }
-    
-    private static Resource getClassResource(Resource baseToken, Model res){
-        return getResource(res, className(baseToken));
+        Property precedenceProperty = baseToken.getModel().getProperty(BASE_TTL_PREF + "precedence");
+        int tokenPrecedence = baseToken.getProperty(precedenceProperty).getInt();
+        return new ParsedClassName(
+            possibleClasses.stream()
+                .filter(classDef -> Integer.valueOf(tokenPrecedence).equals(classDef.getPropertyValue("precedence")))
+                .findFirst()
+                .map(ClassDef::getName)
+                .orElseThrow()
+        );
     }
 
-    private static Resource getResource(Model model, String localName){
-        return model.getResource(RDFUtils.POAS_PREF + localName);
-    }
-    
-    private static void saveModel(String filename, Model model){
-        if(true) return;
-        log.info("saving {}", filename);
-        OutputStream out = null;
+    public static void saveModel(String filename, Model model){
+        if(!ENABLE_DEBUG_SAVE) return;
         try {
-            out = new FileOutputStream(DEBUG_DIR + filename);
+            OutputStream out = new FileOutputStream(DEBUG_DIR + filename);
             model.write(out, "TTL");
             out.close();
         } catch (FileNotFoundException e) {
@@ -280,4 +360,6 @@ public class ProgrammingLanguageExpressionRDFTransformer {
             throw new RuntimeException(e);
         }
     }
+
+    private static final boolean ENABLE_DEBUG_SAVE = true;
 }
